[package]
name = "leslie_lamport"
version = "0.3.1"
authors = ["0xAtropine"]
edition = "2018"
description = "A Post-Quantum Cryptographic Library For Lamport Signatures"
repository = "https://github.com/0xAtropine/Leslie-Lamport"
keywords = ["crypto", "cryptography", "post-quantum", "security", "signature"]
categories = ["cryptography", "authentication","algorithms"]
license = "MIT OR Apache-2.0"
readme="README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "serde"
path = "examples/serde.rs"

[[example]]
name = "generation"
path = "examples/generation.rs"

[[example]]
name = "advanced_generation"
path = "examples/advanced_generation.rs"

[dependencies]
getrandom = "0.1.16"
hex = "0.4.2"
blake2-rfc = "0.2.18"
crypto-hash = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.12"
