[package]
name = "leslie_lamport"
version = "0.4.0"
authors = ["0xAtropine"]
edition = "2018"
description = "A Post-Quantum Cryptographic Library For Lamport Signatures"
repository = "https://github.com/0xAtropine/Leslie-Lamport"
keywords = ["crypto", "cryptography", "post-quantum", "security", "signature"]
categories = ["cryptography", "authentication","algorithms"]
license = "MIT OR Apache-2.0"
readme="README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "serde"
path = "examples/serde.rs"

[[example]]
name = "generation"
path = "examples/generation.rs"

[[example]]
name = "advanced_generation"
path = "examples/advanced_generation.rs"

[dependencies]
# Used to be 0.1.16
getrandom = "0.2.2"

# Data Format
hex = "0.4.2"

# Hash Functions
blake2-rfc = "0.2.18"
crypto-hash = "0.3.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.12"
bincode = "1.3.2"
